plugins {
    id 'java'
    id 'jacoco'
    id 'com.github.kt3k.coveralls' version '2.12.0'
}

group 'com.jacoblucas'
version '1.0-SNAPSHOT'

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.vavr:vavr:0.10.4'
    implementation "org.immutables:value:2.9.2"
    implementation "com.google.guava:guava:31.1-jre"
    implementation "org.apache.commons:commons-lang3:3.12.0"

    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

test {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

jacocoTestReport {
    reports {
        xml.enabled = true // coveralls plugin depends on xml format report
        html.enabled = true
    }
}

coveralls {
    jacocoReportPath 'build/reports/jacoco/test/jacocoTestReport.xml'
}
